<resources>
    <string name="app_name">GruvNote</string>
    <string name="appHeaderHomeActivity">My Diary</string>
    <string name="diary">Diary</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="contentDescriptionCalendar">Calendar</string>
    <string name="contentDescriptionDiary">Diary</string>
    <string name="contentDescriptionSetting">Setting</string>
    <string name="diary_entry_title">Diary Entry Title</string>
    <string name="date">Date</string>
    <string name="diary_entry_content_goes_here">Diary entry content goes here…</string>
    <string name="click_to_add_new_note">Add a New Note</string>


    <string name="headerNoteWritingActivity">Untitled</string>
    <string name="untitled">Untitled</string>
    <string name="diaryEntryBeginningText">Write your thoughts here…</string>
    <string name="delete">Delete</string>
    <string name="back_button">back home</string>
    <string name="note_title">Note Title</string>
    <string name="delete_note">delete note</string>
    <string name="calender_title">Calender</string>
    <string name="settings_activity_title">Settings</string>
    <string name="click_to_view_the_setting">click to view the setting</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="privacy_policy_text">
        sake
    </string>
    <string name="about_gruvnote">About GruvNote</string>
    <string name="noSavedNotes">No saved notes on this date</string>
</resources>