<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColoursGruvboxLight"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBottom"
        android:layout_width="415dp"
        android:layout_height="63dp"
        android:layout_marginEnd="1dp"
        android:background="@color/buttonColoursGruvboxLight"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewHeaderHomeScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appHeaderHomeActivity"
        android:textColor="@color/textColoursGruvboxLight"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbarBottom"
        app:layout_constraintEnd_toEndOf="@+id/toolbarMain"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <ImageView
        android:id="@+id/imageViewCalendar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/contentDescriptionCalendar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/toolbarBottom"
        app:srcCompat="@drawable/calendar_light" />

    <ImageView
        android:id="@+id/imageViewNoteIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/contentDescriptionDiary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewCalendar"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/toolbarBottom"
        app:srcCompat="@drawable/note_light" />

    <ImageView
        android:id="@+id/imageViewSetting"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/contentDescriptionSetting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toEndOf="@+id/imageViewCalendar"
        app:srcCompat="@drawable/setting_light" />

    <TextView
        android:id="@+id/textViewNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/diary"
        android:textColor="@color/gruvbox_light_aqua"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewCalendar"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/settings"
        android:textColor="@color/textColoursGruvboxLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbarBottom"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/textViewCalendar" />

    <TextView
        android:id="@+id/textViewCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/calendar"
        android:textColor="@color/textColoursGruvboxLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/buttonColoursGruvboxLight"
        android:clickable="true"
        android:contentDescription="@string/click_to_add_new_note"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/textViewSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/textColoursGruvboxLight"
        app:srcCompat="@drawable/plus" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="400dp"
        android:layout_height="574dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        tools:listitem="@layout/grid_item" />
</androidx.constraintlayout.widget.ConstraintLayout>